--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   faker: ^2.1.0
   another_flutter_splash_screen: ^1.2.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,18 @@ dev_dependencies:
   auto_route_generator: ^8.0.0
   freezed: ^2.4.7
   build_runner: null
+
+
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/mob_app_logo.png"
+
+
+
+
 
   flutter_lints: ^3.0.0
 
